fix layout bug

--- a/component/CarouselItem.module.css
+++ b/component/CarouselItem.module.css
@@ -1,6 +1,7 @@
 .item{
     height: 100%;
-    width: 80%;
+    width: 100%;
+    /* max-width: 100vw; */
     cursor: pointer;
     position: relative;
     margin: 2rem;
@@ -13,4 +14,10 @@
 
 .item:hover{
     opacity: 0.8;
+}
+
+@media(max-width: 600px){
+    .item{
+        background-size: cover;
+    }
 }
